--- a/jpeg2000wrapper/Project.toml
+++ b/jpeg2000wrapper/Project.toml
@@ -9,3 +9,4 @@ ColorVectorSpace = "c3611d14-8923-5661-9e6a-0046d554d3a4"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 FixedPointNumbers = "53c48c17-4a7d-5ca2-90c5-79b7896eea93"
 OpenJpeg_jll = "643b3616-a352-519d-856d-80112ee9badc"
+TestImages = "5e47fb64-e119-507b-a336-dd2b206d9990"
