--- a/gifwrapper/gen/libgifextra/makefile
+++ b/gifwrapper/gen/libgifextra/makefile
@@ -1,6 +1,7 @@
 CC=gcc
 CFLAGS=-I./include -fPIC 
 DEPS = libgifextra.h 
+PREFIX = /usr/local
 
 all: libgifextra
 UNAME_S := $(shell uname -s)
@@ -25,3 +26,14 @@ endif
 
 libgifextra: libgifextra.a
 	$(CC) -shared $(SHARED_BEGIN) $^ $(SHARED_END) -o $@.$(LIBEXT) -lgif
+
+# PREFIX is environment variable, but if it is not set, then set default value
+ifeq ($(PREFIX),)
+	PREFIX := /usr/local
+endif
+
+install: libgifextra.a
+	install -d $(DESTDIR)$(PREFIX)/lib/
+	install -m 644 libgifextra.a $(DESTDIR)$(PREFIX)/lib/
+	install -d $(DESTDIR)$(PREFIX)/include/
+	install -m 644 libgifextra.h $(DESTDIR)$(PREFIX)/include/
